# storylens

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/storylens/: app.py
src/storylens/config/: tasks.yaml
src/storylens/tools/: email_tools.py
storylens/: Untitled  app.py  crew.py  main.py  schemas.py
storylens/config/: agents.yaml
storylens/tools/: pdf_tools.py
